# cloudsmets

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  T-ZigBee.md  config.md  debugging.md  development.md  hacking.md  sniffing.md
docs/: IHD Requirements.md  SMETS-emulation.md  Sample Join Notes.md  T-ZigBee.md  TODO.md  Testing Schedule.md  ZigBee Overview.md  case.md  cloudsmets-design.md  components.md  config.md  coredumps.md  debugging.md  development.md  eclipse-workspace.md  esp32-components.md  github.md  json..md  libraries.md  lilygo.md  mqtt.md  phases.md  telink_tools.md  testmermaid.md  tlsr8258-design.md  tlsr8285_builds.md  webpages.md  zbhci-client-server.md  zgc protocol.md  zgc_testing.md  zigbee_gateway_controller.md
esp32/cloudsmets/main/: CMakeLists.txt  Kconfig.projbuild  TODO.md  Test Plan.md  azure.c  azure.h  cloud.h  cloudsmets_main.c  config.c  config.h  cs_app.c  cs_app.h  cs_cfg.c  cs_cfg.h  cs_config.c  cs_flash.c  cs_flash.h  cs_gpio.h  cs_log.h  cs_mqtt.c  cs_mqtt.h  cs_ota.c  cs_ota.h  cs_string.h  cs_time.c  cs_time.h  cs_web.c  cs_web.h  cs_wifi.c  cs_wifi.h  cs_xml_err.h  cs_zigbee.c  cs_zigbee.h  debug.c  esp_mqtt_err.h  flasher.c  ft_err.c  ft_err.h  idf_component.yml  index.html  (+21 more)
esp32/cloudsmets/main/telink/: types.h  utility.h  zbhci.h  zcl_time.h
webexample/: README.md  aws.html  azure.html  cloud.html  debug.html  getdata.js  google.html  httpserver.py  index.html  info.html  info.json  menu.html  minihtml.py  onload.js  ota.json  reset.html  style.css  w3-include-html.js  wifi.html  wifi.json  zigbee.html  zigbee.json
(+66 files in other folders)
